--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,162 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+:root {
+  --color-background: black;
+  --color-text: white;
+}
+
+body {
+  background-color: var(--color-background);
+  color: var(--color-text);
+  margin: 0;
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+}
+
+#title-container {
+  background-image: url("background-2.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 1450px;
+  height: 850px;
+  margin: 0 auto;
+  position: relative;
+}
+
+h1 {
+  font-size: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 150px;
+  padding: 30px 20px;
+
+  text-shadow: 10px 10px 11px rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
+}
+
+#buttons {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-bottom: 200px;
+}
+
+button {
+  font-size: 1.5rem;
+  padding: 20px 30px;
+  margin: 5px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border: 2px solid #ffff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  letter-spacing: 10px;
+  width: 200px;
+  text-indent: 8px;
+}
+
+#result {
+  overflow-y: auto;
+  height: calc(100% - 120px);
+  padding: 10px;
+}
+
+.message {
+  margin-bottom: 10px;
+}
+
+.ai-message {
+  text-align: left;
+}
+
+.user-message {
+  text-align: right;
+}
+
+.black-square {
+  background-color: rgba(0, 0, 0, 0.85);
+  width: 1000px;
+  height: 700px;
+  border: 5px solid white;
+  position: absolute;
+  z-Index: 2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.square-text {
+  color: white;
+  font-size: 20px;
+  text-align: left;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+}
+
+.next-button {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 1.5rem;
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  border: 5px solid white;
+  border-radius: 5px;
+  cursor: pointer;
+  letter-spacing: 2px;
+  z-index: 3;
+}
+
+.square-text-first-line {
+  display: block;
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+
+.custom-square {
+  background-color: black;
+  border: 5px solid white;
+  margin: 8px;
+}
+
+.large {
+  width: 100px;
+  height: 100px;
+}
+
+.small {
+  width: 50px;
+  height: 50px;
 }
